# druider

./: .gitignore  pyproject.toml  serve.toml  tox.ini
src/druid_helper/: app.py  data.py  layout.tcss  listing.py  table.py
src/druider/: __main__.py  app.py  data.py  layout.tcss  listing.py  logging.py  main.py
