[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "druider"
version = "0.0.0"
dependencies = [
    "textual",
]

[project.optional-dependencies]
serve = [
    "textual-serve",
]

[project.scripts]
druider = "druider.main:main"

[tool.setuptools.package-data]
"*" = ["*.*"]
